--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
 lxml == 4.9.0
 coveralls
 Jinja2
-signxml == 2.9.0
+signxml
 urllib3 >= 1.22
 suds-jurko >= 0.6
 suds-jurko-requests >= 1.1
 defusedxml >= 0.4.1, < 1
 eight >= 0.3.0, < 1
 cryptography >= 3.2
-pyOpenSSL == 20.0.1
+pyOpenSSL == 23.2.0
 certifi >= 2015.11.20.1
 xmlsec >= 1.3.3
 reportlab
